# Program_Hexapode

./: .gitignore  AVANCER_G_D_sans_CAM_DEMO.py  Makefile  Programme_avec_camera_thread.py  README.md  cam_ilyas.py  fusion  info.txt  main.py  programme_avancer.py  pyproject.toml  script_deplacement_clavier.py  script_test_patte.py  trouver_port_cam.py
Camera/: Programme_avec_camera_sans_thread.py  Programme_avec_camera_thread.py  cam_ilyas.py  camera_test.py  colors_detections.py  detect_color.py  fluxCamera.py  script_test_cam.py  visionHexapode.py  vision_libcamera.py  webCam.py
Camera/test_cam/: test.h264  visionHexapode.py
Deplacement/: AVANCER_G_D_sans_CAM_DEMO.py  deplacement_hexapode.py  programme_avancer.py
Deplacement/dynamixel_sdk/: script_port_hexapode.py
Deplacement/giveatry/: avancer_propre.py  script_deplacement_clavier.py  script_move_keyboard2.py
Deplacement/protocol2_0/: broadcast_ping.py  factory_reset.py  ping.py  reboot.py
Pictures/: CameraManager.py  ColorDetection.py  take_pictures.py
Simulation/: sim_deplacement.py  sim_loop.py  sim_visualization.py
UseCase/: diag.mmd  diagram2Sequence.md
protocol2_0/: AVANCER_G_D_sans_CAM_DEMO.py  Programme_avec_camera_thread.py  camera_test.py  programme_avancer.py  read_write.py  sync_read_write.py
test_cam/: cam_allumer.py
