[tool.poetry]
name = "program-hexapode"
version = "0.1.0"
description = ""
authors = ["Zazou <aito.kenza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
dynamixel-sdk = "^3.7.31"
isort = "^5.13.2"
mock = "^5.1.0"
pylance = "^0.18.0"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
